<resources>
    <string name="app_name">MathView</string>
    <string name="button">√x</string>
    <string name="button2">+</string>
    <string name="button3">-</string>
    <string name="button4">x</string>
    <string name="button5">:</string>
    <string name="button6">x^2</string>
    <string name="button7">%</string>
    <string name="button8">sen(x)</string>
    <string name="button9">cos(x)</string>
    <string name="button10">tg(x)</string>
    <string name="button11">ctg(x)</string>
    <string name="button12">e^(x)</string>
    <string name="button13">ln(x)</string>
    <string name="button14">10^(x)</string>
    <string name="button15">log10(x)</string>
    <string name="button16">HELP</string>
    <string name="button19">|x|</string>
    <string name="button18">φ(x)</string>
    <string name="button30">arcsen(x)</string>
    <string name="button31">arccos(x)</string>
    <string name="button32">arctg(x)</string>
    <string name="button33">arcctg(x)</string>
    <string name="button34">1/x</string>
    <string name="button35">E</string>
    <string name="button37">senh(x)</string>
    <string name="button38">cosh(x)</string>
    <string name="button39">tgh(x)</string>
    <string name="button40">ctgh(x)</string>
    <string name="button41">RAD</string>
    <string name="button42">BIN</string>
    <string name="button43">OCT</string>
    <string name="button44">EXA</string>
    <string name="button45">settsenh(x)</string>
    <string name="button46">settcosh(x)</string>
    <string name="button47">setttgh(x)</string>
    <string name="button48">settctgh(x)</string>
    <string name="b9">9</string>
    <string name="b8">8</string>
    <string name="b7">7</string>
    <string name="b6">6</string>
    <string name="b5">5</string>
    <string name="b4">4</string>
    <string name="b3">3</string>
    <string name="b2">2</string>
    <string name="b1">1</string>
    <string name="b0">0</string>
    <string name="punto">.</string>
    <string name="uguale">=</string>
    <string name="delate">C</string>
    <string name="button36">DEL</string>
    <string name="action_one">MatFact! version 1.0</string>
    <string name="action_two">Enjoy with Math!</string>
    <string name="action_three">Created by: Raffaele Maddaloni and Giuseppe Barbato ®</string>
    <string name="navigation">Advanced functions</string>
    <string name="action_four">Geometry Plotting</string>
    <string name="action_five">Linear Equations</string>
    <string name="action_six">Elementary Plotting</string>
    <string name="action_seven">Differential Equations</string>
    <string name="action_eight">Random Numbers</string>
    <string name="action_nine">Complex Numbers</string>
    <string name="action_ten">Signal Plotting</string>
    <string name="history_window">History Window</string>
    <string name="classico">Classical Functions</string>
    <string name="plottare">Plotting Functions</string>
    <string name="menu">Menù</string>
    <string name="titolo">Collection</string>
    <string name="library">Scroll from left to right to see more...</string>
    <string name="action_home">Home</string>
    <string name="termine_quadratico">a</string>
    <string name="termine_lineare">b</string>
    <string name="termine_costante">c</string>
    <string name="calculate">Calculate!</string>
    <string name="presentazione2">Linear Equations\nFirst Degree: bx+c=0\nSecond Degree: ax^2+bx+c=0</string>
    <string name="presentazione4">Linear Differential Equations\nFirst Order: by\'+cy=0\nSecond Order:
        ay\'\'+by\'+cy=0
    </string>
    <string name="presentazione5">Random Numbers Generator</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="how_many">How Many?</string>
    <string name="generate">Generate!</string>
    <string name="presentazione6">Complex Numbers\nz=a+ib</string>
    <string name="forma_algebrica">Algebraic\nForm:</string>
    <string name="coniugato">z*=</string>
    <string name="forma_esponenziale">Exponential\nForm:</string>
    <string name="parte_reale">Re(z)=</string>
    <string name="coefficiente_parte_immaginaria">Im(z)=</string>
    <string name="modulo">|z|=</string>
    <string name="fase">arg(z)=</string>
    <string name="quadrato_complesso">z^2</string>
    <string name="radice_complessa">√z</string>
    <string name="here">Input...</string>
    <string name="costante">Interpolat\nOff</string>
    <string name="potenza_cubo">x^3</string>
    <string name="esp_due">2^(x)</string>
    <string name="log_due">log2(x)</string>
    <string name="passo">Sampling\nStep:</string>
    <string name="minimo">Lower\nEnd:</string>
    <string name="massimo">Upper\nEnd:</string>
    <string name="presentazione3">Elementary Plotting</string>
    <string name="ampiezza">Amplitude:</string>
    <string name="frequenza">Frequency:</string>
    <string name="fase_iniziale">Horinzontal\nOffset:</string>
    <string name="scostamento">Vertical\nOffset:</string>
    <string name="view">Build\nGraph 1</string>
    <string name="view_bis">Build\nGraph 2</string>
    <string name="plot">Plot!</string>
    <string name="calculator">Calculator</string>
    <string name="Basic">Basic Functions</string>
    <string name="welcome">Welcome in MathView!</string>
    <string name="messaggio2">Scroll from left to right to access to the Collection!</string>
    <string name="nascondi">Hide</string>
    <string name="clock">Clock</string>
    <string name="presentazione7">Signal Plotting</string>
    <string name="f1">Frequency\n1:</string>
    <string name="f2">Frequency\n2:</string>
    <string name="tau1">Time Constant 1:</string>
    <string name="tau2">Time Constant 2:</string>
    <string name="durata">Duration:</string>
    <string name="ritardo">Delay:</string>
    <string name="offset">Offset:</string>
    <string name="onda_quadra">Π(t)</string>
    <string name="onda_triangolare">Λ(t)</string>
    <string name="seno_cardinale">sinc(t)</string>
    <string name="seno_cardinale_al_quadrato">sinc(t)^2</string>
    <string name="evoluzione_primo_ordine">First Order Evolution</string>
    <string name="evoluzione_secondo_ordine">Second Order Evolution</string>
    <string name="evoluzione_critica">Critical Evolution</string>
    <string name="evoluzione_armonica">Harmonic Evolution</string>
    <string name="smorzamento">Damping:</string>
    <string name="pulsazione_naturale">Natural Pulsation:</string>
    <string name="modulatione_a_finestra_del_coseno">Window Modulated Cosine</string>
    <string name="modulazione_a_rampa_del_coseno">Cosine Modulated Triangularly</string>
    <string name="modulazione_armonica_del_coseno">Cosine Harmonically Modulated</string>
    <string name="presentazione1">Geometry Plotting</string>
    <string name="triangoli">Triangles</string>
    <string name="retta">Straights</string>
    <string name="circonferenza">Circumferences</string>
    <string name="parabola">Parables</string>
    <string name="ellisse">Ellipses</string>
    <string name="iperbole">Hyperboles</string>
    <string name="view_extra">Build Graph:</string>
    <string name="messaggio">Scroll from left to right to see more!</string>
    <string name="titolo2">Information</string>
    <string name="testo1">MathView is a free and basic math</string>
    <string name="testo2">software, born to offer you an</string>
    <string name="testo3">interactive environment, in witch</string>
    <string name="testo4">attempt a discrete math functions</string>
    <string name="testo5">class to support your work.</string>
    <string name="profilo_utente">User Profile</string>
    <string name="profilo">Profile</string>
    <string name="nome">Name:</string>
    <string name="cognome">Surname:</string>
    <string name="genere">Gender:</string>
    <string name="nome_utente">Username:</string>
    <string name="password">Password:</string>
    <string name="professione">Profession:</string>
    <string name="anno_di_nascita">Birthday:</string>
    <string name="titolo_start_page">MathView</string>
    <string name="presentazione_start_page">A free and basic math software!</string>
    <string name="accesso">Access</string>
    <string name="registrazione">Registration</string>
    <string name="back">Go Back</string>
    <string name="tratteggio">-----------------</string>
    <string name="domanda">Are you\nsure you\nwant to\nexit\nMath\nView?</string>
    <string name="domanda2">Are you sure\nyou want to\nexit Math\nView?</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="presentazione8">Text Note</string>
    <string name="presentazione9">Image Note</string>
    <string name="presentazione10">Audio Note</string>
    <string name="photoView">PhotoView</string>
    <string name="photoViewLand">\n\nPhotoView</string>
    <string-array name="maschio_femmina">
        <item>-----------------</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="note">Note Functions</string>
    <string name="note_testuali">Text Note</string>
    <string name="note_immagini">Image Note</string>
    <string name="note_audio">Audio Note</string>
    <string name="uno">Profile</string>
    <string name="due">Calculator</string>
    <string name="tre">Random Numbers</string>
    <string name="quattro">Linear Equations</string>
    <string name="cinque">Differential Equations</string>
    <string name="sei">Complex Numbers</string>
    <string name="sette">Geometry Plotting</string>
    <string name="otto">Elementary Plotting</string>
    <string name="nove">Signal Plotting</string>
    <string name="dieci">Text Note</string>
    <string name="undici">Audio Note</string>
    <string name="dodici">Image Note</string>
</resources>

