<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_one"
            android:icon="@mipmap/icon"
            app:showAsAction="always"
            android:title="@string/action_one"/>
    <item
            android:id="@+id/action_two"
            android:icon="@mipmap/my_icon_message1_round"
            app:showAsAction="always"
            android:title="@string/action_two"/>
    <item
            android:id="@+id/action_three"
            android:icon="@mipmap/my_icon_message2_round"
            app:showAsAction="always"
            android:title="@string/action_three"/>
    <item
            android:id="@+id/action_share"
            android:icon="@mipmap/imm51_foreground"
            app:showAsAction="always"
            android:title="@string/share_button"/>
    <item
            android:id="@+id/action_home"
            android:icon="@mipmap/icona7_round"
            app:showAsAction="always"
            android:title="@string/action_home"/>
</menu>