<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Function3"
        android:background="@drawable/my_background1">
    <Button
            android:text="@string/button9"
            android:layout_width="81dp"
            android:layout_height="43dp"
            android:id="@+id/button46" android:background="@drawable/my_button1"
            android:textAllCaps="false" android:textSize="18sp" android:textColor="@color/silver"
            app:layout_constraintTop_toBottomOf="@+id/button38" app:layout_constraintStart_toEndOf="@+id/button45"
    />
    <Button
            android:text="@string/button31"
            android:layout_width="83dp"
            android:layout_height="43dp"
            android:id="@+id/button48" android:background="@drawable/my_button1"
            android:textAllCaps="false" android:textSize="18sp" android:textColor="@color/silver"
            app:layout_constraintTop_toBottomOf="@+id/button40" app:layout_constraintStart_toEndOf="@+id/button47"
    />
    <Button
            android:text="@string/button30"
            android:layout_width="82dp"
            android:layout_height="43dp"
            android:id="@+id/button47" android:background="@drawable/my_button1"
            android:textAllCaps="false" android:textSize="18sp" android:textColor="@color/silver"
            app:layout_constraintTop_toBottomOf="@+id/button39" app:layout_constraintStart_toEndOf="@+id/button46"
    />
    <Button
            android:text="@string/button8"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:id="@+id/button45" android:background="@drawable/my_button1"
            android:textAllCaps="false" android:textSize="18sp" android:textColor="@color/silver"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button37"/>
    <Button
            android:text="@string/plot"
            android:layout_width="326dp"
            android:layout_height="45dp" android:id="@+id/button17"
            android:textColor="@color/ametista" android:textAllCaps="false"
            android:textSize="30sp"
            android:background="@drawable/my_button1"
            app:layout_constraintTop_toBottomOf="@+id/textView23" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/view"
            android:layout_width="80dp"
            android:layout_height="47dp" android:id="@+id/button20"
            android:textColor="@color/red" android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@drawable/my_button1"
            app:layout_constraintTop_toBottomOf="@+id/button45" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/view_bis"
            android:layout_width="80dp"
            android:layout_height="47dp" android:id="@+id/button22"
            android:textColor="@color/red" android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@drawable/my_button1"
            app:layout_constraintTop_toBottomOf="@+id/button20" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="50dp" android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/silver"
            android:textSize="18sp" android:textAllCaps="false"
            android:background="@drawable/my_button1"
            android:text="@string/passo"
            android:textAlignment="center"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pres"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="51dp" android:id="@+id/textView25"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/silver"
            android:textSize="18sp" android:textAllCaps="false"
            android:background="@drawable/my_button1"
            android:text="@string/massimo"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="51dp" android:id="@+id/textView26"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/silver"
            android:textSize="18sp" android:textAllCaps="false"
            android:background="@drawable/my_button1"
            android:text="@string/minimo"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Button
            android:text="@string/costante"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:id="@+id/button8"
            android:textColor="@color/red"
            android:textAllCaps="false" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:background="@drawable/my_button1"
            app:layout_constraintTop_toBottomOf="@+id/textView25"/>
    <Button
            android:text="@string/button4"
            android:layout_width="81dp"
            android:layout_height="43dp"
            android:id="@+id/button9"
            android:textColor="@color/silver"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/button8"
            android:textSize="18sp" android:background="@drawable/my_button1"
            app:layout_constraintTop_toBottomOf="@+id/editText5"/>
    <Button
            android:text="@string/button6"
            android:layout_width="82dp"
            android:layout_height="43dp" android:id="@+id/button10"
            android:textColor="@color/silver" android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/button9"
            android:textSize="18sp"
            android:background="@drawable/my_button1"
            app:layout_constraintTop_toBottomOf="@+id/textView27"/>
    <Button
            android:text="@string/potenza_cubo"
            android:layout_width="83dp"
            android:layout_height="43dp" android:id="@+id/button11"
            android:textColor="@color/silver"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@drawable/my_button1"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/editText8"/>
    <Button
            android:text="@string/button"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:id="@+id/button30" android:background="@drawable/my_button1"
            android:textAllCaps="false" android:textSize="18sp" android:textColor="@color/silver"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8"/>
    <Button
            android:text="@string/button12"
            android:layout_width="82dp"
            android:layout_height="43dp"
            android:id="@+id/button32" android:background="@drawable/my_button1"
            android:textAllCaps="false" android:textSize="18sp" android:textColor="@color/silver"
            app:layout_constraintStart_toEndOf="@+id/button31"
            app:layout_constraintTop_toBottomOf="@+id/button10"/>
    <Button
            android:text="@string/button34"
            android:layout_width="81dp"
            android:layout_height="43dp"
            android:id="@+id/button31" android:background="@drawable/my_button1"
            android:textAllCaps="false" android:textSize="18sp" android:textColor="@color/silver"
            app:layout_constraintStart_toEndOf="@+id/button30"
            app:layout_constraintTop_toBottomOf="@+id/button9"/>
    <Button
            android:text="@string/button13"
            android:layout_width="83dp"
            android:layout_height="43dp"
            android:id="@+id/button33" android:background="@drawable/my_button1"
            android:textAllCaps="false" android:textSize="18sp" android:textColor="@color/silver"
            app:layout_constraintTop_toBottomOf="@+id/button11"
            app:layout_constraintStart_toEndOf="@+id/button32"
    />
    <Button
            android:text="@string/log_due"
            android:layout_width="83dp"
            android:id="@+id/button40"
            android:layout_height="43dp"
            android:background="@drawable/my_button1"
            android:textColor="@color/silver"
            android:textAllCaps="false" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/button33" app:layout_constraintStart_toEndOf="@+id/button39"
    />
    <Button
            android:text="@string/esp_due"
            android:layout_width="82dp"
            android:layout_height="43dp" android:id="@+id/button39"
            android:background="@drawable/my_button1" android:textColor="@color/silver"
            android:textAllCaps="false" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/button32" app:layout_constraintStart_toEndOf="@+id/button38"
    />
    <Button
            android:text="@string/button14"
            android:layout_width="80dp"
            android:layout_height="43dp" android:id="@+id/button37"
            android:background="@drawable/my_button1" android:textColor="@color/silver"
            android:textAllCaps="false" android:textSize="18sp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button30"/>
    <Button
            android:text="@string/button15"
            android:layout_width="81dp"
            android:layout_height="43dp" android:id="@+id/button38"
            android:background="@drawable/my_button1" android:textColor="@color/silver"
            android:textAllCaps="false" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/button31" app:layout_constraintStart_toEndOf="@+id/button37"/>
    <TextView
            android:text="@string/library"
            android:layout_width="326dp"
            android:layout_height="18dp" android:id="@+id/textView3" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"/>
    <TextView
            android:layout_width="326dp"
            android:layout_height="35dp" android:id="@+id/pres"
            android:text="@string/presentazione3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:textAlignment="center"
            android:textSize="24sp" android:background="@drawable/my_button1" android:textColor="@color/silver"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="81dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText4"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/pres" android:textSize="14sp" android:textColor="@color/blue"
            android:hint="@string/here"/>
    <EditText
            android:layout_width="81dp"
            android:layout_height="51dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/editText5"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/editText6" android:textSize="14sp"
            android:textColor="@color/blue" android:hint="@string/here"/>
    <EditText
            android:layout_width="81dp"
            android:layout_height="51dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/editText6"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toBottomOf="@+id/editText4" android:textSize="14sp"
            android:textColor="@color/blue" android:hint="@string/here"/>
    <TextView
            android:text="@string/ampiezza"
            android:layout_width="82dp"
            android:layout_height="38dp" android:id="@+id/textView24"
            app:layout_constraintStart_toEndOf="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/pres" android:background="@drawable/my_button1"
            android:textAlignment="center" android:textColor="@color/silver" android:textSize="14sp"/>
    <TextView
            android:text="@string/scostamento"
            android:layout_width="82dp"
            android:layout_height="38dp" android:id="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/textView28" app:layout_constraintStart_toEndOf="@+id/editText5"
            android:background="@drawable/my_button1" android:textAlignment="center" android:textColor="@color/silver"/>
    <TextView
            android:text="@string/fase_iniziale"
            android:layout_width="82dp"
            android:layout_height="38dp" android:id="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/textView29" app:layout_constraintStart_toEndOf="@+id/editText6"
            android:background="@drawable/my_button1" android:textAlignment="center" android:textColor="@color/silver"/>
    <TextView
            android:text="@string/frequenza"
            android:layout_width="82dp"
            android:layout_height="38dp" android:id="@+id/textView29"
            app:layout_constraintStart_toEndOf="@+id/editText6"
            app:layout_constraintTop_toBottomOf="@+id/textView24" android:background="@drawable/my_button1"
            android:textAlignment="center" android:textColor="@color/silver"/>
    <EditText
            android:layout_width="83dp"
            android:layout_height="38dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/editText7"
            android:textSize="14sp" app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/pres" android:textColor="@color/blue"
            android:hint="@string/here"/>
    <EditText
            android:layout_width="83dp"
            android:layout_height="38dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/editText8"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/editText9" app:layout_constraintStart_toEndOf="@+id/textView27"
            android:textColor="@color/blue" android:hint="@string/here"/>
    <EditText
            android:layout_width="83dp"
            android:layout_height="38dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/editText9"
            android:textSize="14sp" app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/editText10" android:textColor="@color/blue"
            android:hint="@string/here"/>
    <EditText
            android:layout_width="83dp"
            android:layout_height="38dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/editText10"
            android:textSize="14sp" app:layout_constraintStart_toEndOf="@+id/textView29"
            app:layout_constraintTop_toBottomOf="@+id/editText7" android:textColor="@color/blue"
            android:hint="@string/here"/>
    <TextView
            android:layout_width="246dp"
            android:layout_height="47dp" android:id="@+id/textView30"
            android:textSize="18sp" android:textAlignment="center"
            android:textColor="@color/blue" android:background="@drawable/my_button1"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button46"/>
    <TextView
            android:layout_width="246dp"
            android:layout_height="47dp" android:id="@+id/textView23"
            android:textSize="18sp" android:textAlignment="center"
            android:textColor="@color/blue" android:background="@drawable/my_button1"
            app:layout_constraintStart_toEndOf="@+id/button22"
            app:layout_constraintTop_toBottomOf="@+id/textView30"/>

</android.support.constraint.ConstraintLayout>
